<resources>
    <string name="app_name">App reembolso</string>
    <string name="hint_username">Nome de usuário</string>
    <string name="hint_fullname">Nome completo</string>
    <string name="hint_email">Email</string>
    <string name="btn_login">Entrar</string>
    <string name="check_remember_login">Lembrar informações de login</string>
    <string name="hint_password">Senha</string>
    <string name="hint_password_confirmation">Confirme a senha</string>
    <string name="btn_save_user">Salva Usuário</string>
    <string name="hint_from">Origem</string>
    <string name="hint_to">Destino</string>
    <string name="hint_date">Data da viagem</string>
    <string name="hint_status">Status</string>
    <string name="hint_attachment">Foto nota fiscal</string>
    <string name="hint_attachment_km_b">Foto Km antes</string>
    <string name="hint_attachment_km_a">Foto Km depois</string>
    <string name="btn_save_request">Enviar requisição</string>
    <string name="my_requests">Minhas solicitações</string>
    <string name="new_request">Solicitar reembolso</string>
    <string name="edit_user">Editar dados pessoais</string>
    <string name="logout">Sair</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>
    <string name="btn_close_request">Encerrar</string>
    <string name="btn_approve_request">Aprovar</string>
    <string name="btn_reject_request">Rejeitar</string>
</resources>