<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_interface"
    tools:context=".view.RequestEditAdminActivity">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_from"
        android:layout_marginTop="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/hint_from"
        android:inputType="text"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_to"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/hint_to"
        android:inputType="text"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/edittext_from"
        app:layout_constraintEnd_toEndOf="@+id/edittext_from"
        app:layout_constraintTop_toBottomOf="@+id/edittext_from"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_date"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/hint_date"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="17dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/edittext_to"
        app:layout_constraintEnd_toEndOf="@+id/edittext_to"
        app:layout_constraintTop_toBottomOf="@+id/edittext_to"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_attachment"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/hint_attachment"
        android:inputType="text"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/edittext_date"
        app:layout_constraintEnd_toEndOf="@+id/edittext_date"
        app:layout_constraintTop_toBottomOf="@+id/imgPhotoKmB" />

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="@+id/button_attachment"
        app:layout_constraintTop_toBottomOf="@+id/button_attachment"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_status"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/hint_status"
        android:inputType="none"
        android:padding="8dp"
        android:textSize="17dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/edittext_to"
        app:layout_constraintEnd_toEndOf="@+id/edittext_to"
        app:layout_constraintTop_toBottomOf="@+id/edittext_date"/>

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_attachment_km_b"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/hint_attachment_km_b"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/edittext_status"
        app:layout_constraintTop_toBottomOf="@+id/edittext_status" />

    <ImageView
        android:id="@+id/imgPhotoKmB"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="45dp"
        app:layout_constraintStart_toStartOf="@+id/edittext_date"
        app:layout_constraintTop_toBottomOf="@+id/button_attachment_km_b"/>

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_attachment_km_a"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/hint_attachment_km_a"
        android:inputType="text"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edittext_status"
        app:layout_constraintTop_toBottomOf="@+id/edittext_status" />

    <ImageView
        android:id="@+id/imgPhotoKmA"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="@+id/edittext_date"
        app:layout_constraintTop_toBottomOf="@+id/button_attachment_km_a"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_approve"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="90dp"
        android:text="@string/btn_approve_request"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_reject"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="70dp"
        android:backgroundTint="@color/red"
        android:text="@string/btn_reject_request"
        app:layout_constraintStart_toStartOf="@+id/button_approve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>